ArbabShah_21-NTU-CS-1301

--- a/HomePage/home.html
+++ b/HomePage/home.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home Page</title>
-    <!-- Add any additional meta tags, stylesheets, or scripts here -->
-</head>
-<body>
-    <header>
-        <!-- Your header content goes here -->
-        <h1>Welcome to Our Website</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <!-- Main content section -->
-        <section>
-            <h2>About Us</h2>
-            <p>Welcome to our website! We provide...</p>
-        </section>
-
-        <!-- Other sections or content goes here -->
-    </main>
-
-    <footer>
-        <!-- Footer content -->
-        <p>&copy; 2023 YourWebsite.com</p>
-    </footer>
-</body>
-</html>
+console.log("Home")
